--- a/Daangn-main/index.html
+++ b/Daangn-main/index.html
@@ -8,11 +8,11 @@
         <script src="script.js"></script>
         <meta property="og:title" content="당신 근처의 당근">
         <meta property="og:description" content="중고 거래부터 동네 정보까지, 이웃과 함께해요. 가깝고 따뜻한 당신의 근처를 만들어요.">
-        <meta property="og:image" href="assets/image.png">
+        <meta property="og:image" href="https://phw0773.github.io/Daangn/assets/image.png">
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="당신 근처의 당근">
         <meta name="twitter:description" content="중고 거래부터 동네 정보까지, 이웃과 함께해요. 가깝고 따뜻한 당신의 근처를 만들어요.">
-        <meta name="twitter:image" content="assets/image.png">
+        <meta name="twitter:image" content="https://phw0773.github.io/Daangn/assets/image.png">
     </head>
     <body>
         <header>
